fix button text color on iOS

--- a/src/app/Album.module.css
+++ b/src/app/Album.module.css
@@ -89,6 +89,7 @@
 }
 
 .button {
+  color: black;
   background: none;
   border: none;
   font-size: 1rem;
